# fim-one

./: .all-contributorsrc  .gitignore  .translation-cache.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  docker-compose.tunnel.yml  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml  start.sh
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml  security_report.yml
.github/workflows/: i18n-sync.yml
docs/: changelog.mdx  contributing.mdx  docs.json  extension-guide.mdx  gt-lock.json  gt.config.json  index.mdx  openapi.json  quickstart.mdx  roadmap.mdx  whitepaper.mdx  why.mdx
docs/api/: authentication.mdx  overview.mdx
docs/architecture/: agent-discovery.mdx  connector-architecture.mdx  context-management.mdx  dag-engine.mdx  design-philosophy.mdx  llm-provider-guide.mdx  organization.mdx  philosophy.mdx  planning-landscape.mdx  react-engine.mdx  system-overview.mdx
docs/concepts/: ai-builder.mdx  execution-modes.mdx
docs/configuration/: database.mdx  environment-variables.mdx  model-management.mdx  models.mdx
docs/configuration/channels/: overview.mdx
docs/connectors/: xinchuang-databases.mdx
docs/de/: changelog.mdx  contributing.mdx  extension-guide.mdx  quickstart.mdx  roadmap.mdx  whitepaper.mdx  why.mdx
docs/de/api/: overview.mdx
docs/de/architecture/: agent-discovery.mdx  context-management.mdx  design-philosophy.mdx  llm-provider-guide.mdx  organization.mdx  philosophy.mdx  planning-landscape.mdx  react-engine.mdx  system-overview.mdx
docs/de/concepts/: execution-modes.mdx
docs/de/configuration/: environment-variables.mdx  model-management.mdx  models.mdx
docs/de/integrations/: exa.mdx
docs/fr/: changelog.mdx  contributing.mdx  quickstart.mdx  roadmap.mdx  whitepaper.mdx  why.mdx
docs/fr/api/: overview.mdx
docs/integrations/: exa.mdx
docs/ja/: changelog.mdx  contributing.mdx  quickstart.mdx  roadmap.mdx  whitepaper.mdx  why.mdx
docs/ja/api/: overview.mdx
docs/ko/: changelog.mdx  contributing.mdx  quickstart.mdx  roadmap.mdx  whitepaper.mdx  why.mdx
docs/strategy/: competitive-landscape.mdx
docs/zh/: changelog.mdx  contributing.mdx  extension-guide.mdx  index.mdx  quickstart.mdx  roadmap.mdx  whitepaper.mdx  why.mdx
examples/: quickstart.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: post-commit-check.sh  seed_workflow_examples.py  setup-hooks.sh  smoke_feishu_gate.py  translate.py  translation-glossary.md
scripts/hooks/: pre-commit
scripts/validate-mdx/: package.json  validate.mjs
src/fim_agent/: __init__.py
src/fim_one/: __init__.py
tests/: conftest.py  test_admin_market.py  test_admin_workflow_batch.py  test_call_agent.py  test_channels_api.py  test_chunking.py  test_compact.py  test_confirmation_expiry.py  test_confirmation_respond.py  test_connector_credentials.py  test_connector_template.py  test_context_guard.py  test_conversation_recovery.py  test_dependency_analyzer.py  test_document_processor.py  test_embedding.py  test_fallback.py  test_feishu_gate_hook.py  test_grounded_retrieve.py  test_grounding.py  test_hooks_bootstrap.py  test_litellm_openai_shim.py  test_loaders.py  test_markdown_chunker.py  test_market_unsubscribe_cascade.py  test_markitdown_core.py  test_markitdown_tool.py  test_mcp_meta_tool.py  test_mcp_server_fork.py  test_memory.py  test_microcompact.py  test_model.py  test_multi_model.py  test_native_function_calling.py  test_pinned_messages.py  test_planner.py  test_prompt_registry.py  test_rate_limit.py  test_react.py  test_react_harness.py  (+26 more)
tests/test_database_connector/: test_adapter.py  test_dm8_driver.py  test_encryption.py  test_safety.py
wiki/: CHANGELOG.md  Competitive-Landscape.md  Environment-Variables.md  Home.md  Planning-Landscape.md  Roadmap.md
(+796 files in other folders)
